--- a/code-solo.html
+++ b/code-solo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- 1. Change the title to My Practice Page or a title you think is better - your pick. -->
-    <title>Code Solo</title>
+    <title>My Practice Page</title>
 </head>
 <body>
     <!-- nav bar -->
@@ -14,12 +14,16 @@
 
     
     <!-- 2. Add the biggest header tag and make the content your name. -->
+  <h1>Kenneth</h1>
 
-    <!-- 3. Add another header tag, but make it smaller. Make the content say "Bio" (do not include the quotes)-->
+    <!-- 3. Add another header tag, but make it smaller. Make the content say "Bio" (do not include the quotes)-->   <h2>Bio</h2>      
+
 
     <!-- 4. Add a paragraph tag. For the content, write 6 short sentences about yourself. -->
+  <p>I like wingstop. I like volleyball. I like being on my phone. I do not like school. I like being out in my free time. I like sleeping in.</p>
 
     <!-- 5. After the third sentence in your bio, add a break tag. -->
+  <br>
 
     <!-- Challenge: go to this link in your browser: https://www.w3schools.com/tags/ref_byfunc.asp 
         and try adding an unordered list. Include a couple list items of things you like. -->
